fix roach overflow

--- a/public/assets/css/map.css
+++ b/public/assets/css/map.css
@@ -94,9 +94,10 @@ body {
 #roach {
   display: inline-block;
   transform: translateY(-4rem);
-  margin-bottom: -5rem;
+
 }
 #title {
-  display: flex;
-
+  overflow: hidden;
+  max-height: 8.5rem;
+  margin-bottom: 2rem;
 }
